--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,16 +3,9 @@ spring:
 # = BANCO DE DADOS
 # ===============================
   datasource:
-    hikari:
-      validation-timeout: '30000'
-      connection-timeout: '600000'
-      initialization-fail-timeout: '2000'
-      idle-timeout: '1200000'
-      maximum-pool-size: '90'
-      isolate-internal-queries: 'true'
-      max-lifetime: '1800000'
-      connection-test-query: SELECT 1
-      minimum-idle: '8'
+    url: ${DATABASE_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     properties:
@@ -25,10 +18,27 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: 'false'
+    open-in-view: false
   
-# ===============================
+  # ===============================
 # = FLYWAY
 # ===============================
   flyway:
     enabled: false
+
+# ===============================
+# SWAGGER
+# ===============================
+springdoc:
+  swagger-ui:
+    filter: false
+    operationsSorter: method
+    tagsSorter: alpha
+    tryItOutEnabled: true
+    defaultModelsExpandDepth: -1
+    docExpansion: "none"
+    path: /docs
+  show-actuator: true
+  api-docs:
+    path: /docs
 
