--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-# ===============================
-# = BANCO DE DADOS
-# ===============================
+  # ===============================
+  # = BANCO DE DADOS
+  # ===============================
   datasource:
     url: ${DATABASE_URL}
     username: ${POSTGRES_USER}
@@ -21,10 +21,33 @@ spring:
     open-in-view: false
   
   # ===============================
-# = FLYWAY
-# ===============================
+  # = FLYWAY
+  # ===============================
   flyway:
     enabled: false
+  
+  # ===============================
+  # = EMAIL
+  # ===============================
+  mail:
+    default-encoding: UTF-8
+    host: ${EMAIL_HOST}
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    port: ${EMAIL_PORT}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+    protocol: smtp
+    test-connection: false
+  # ===============================
+  # = MENSAGENS
+  # ===============================
+  messages:
+    basename: i18n/messages
 
 # ===============================
 # SWAGGER
@@ -42,3 +65,27 @@ springdoc:
   api-docs:
     path: /docs
 
+# ===============================
+# SEGURANÇA
+# ===============================
+api:
+  security:
+    token:
+      algorithm: HS256
+      secret: ${JWT_SECRET}
+      expiration: ${JWT_EXPIRATION}
+      refresh: ${JWT_REFRESH}
+
+# ===============================
+# USUARIO
+# ===============================
+usuario:
+  codigoAcesso:
+    validade:
+      minutos: 10
+ 
+# ===============================
+# LOGBACK
+# ===============================
+logging:
+  config: classpath:logback-spring.xml
