--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -30,3 +30,6 @@ spring:
     url: ${DATABASE_URL}
     user: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+    
+
+geoserver-url: http://localhost:9001/geoserver/vallengeo
