--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -92,7 +92,7 @@
             <version>1.1.1</version>
         </dependency>
 
-         <dependency>
+        <dependency>
             <groupId>de.grundid.opendatalab</groupId>
             <artifactId>geojson-jackson</artifactId>
             <version>1.0</version>
@@ -281,6 +281,11 @@
             <version>2.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.jhonnymertz</groupId>
+            <artifactId>java-wkhtmltopdf-wrapper</artifactId>
+            <version>1.1.13-RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
