--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.49.3",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
     "zod": "^3.22.4"
