--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_ENVIRONMENT=production
-REACT_APP_API_URL= http://localhost:9000
+# REACT_APP_API_URL= http://localhost:9000
+NEXT_PUBLIC_API_URL=http://localhost:9000
