--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,9 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet.fullscreen": "^3.0.2",
     "lucide-react": "^0.288.0",
     "next": "^13.5.5",
     "react": "^18.2.0",
@@ -39,6 +42,8 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "react-leaflet": "^4.2.1",
+    "react-to-print": "^3.0.2",
+    "sass": "^1.80.2",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
@@ -46,6 +51,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/leaflet-draw": "^1.0.11",
+    "@types/leaflet.fullscreen": "^3.0.2",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
