--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet-draw": "^1.0.11",
     "@types/leaflet.fullscreen": "^3.0.2",
     "@types/node": "^20.8.6",
