--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,9 @@
     "date-fns": "^3.2.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet.fullscreen": "^3.0.2",
     "lucide-react": "^0.288.0",
     "next": "^13.5.5",
     "react": "^18.2.0",
@@ -56,6 +59,7 @@
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.5",
