--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -324,6 +324,11 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.graphhopper.external</groupId>
+            <artifactId>jackson-datatype-jts</artifactId>
+            <version>2.14</version>
+        </dependency>
     </dependencies>
 
     <build>
