--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 REACT_APP_ENVIRONMENT=production
-# REACT_APP_API_URL= http://localhost:9000
-NEXT_PUBLIC_API_URL=http://localhost:9000
+NEXT_PUBLIC_API_URL= http://54.232.129.154:9000
+NEXT_PUBLIC_GEOSERVER_URL= http://54.232.129.154:9001/geoserver/vallengeo/wms
