--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "homolog": "NODE_ENV=production next build && next start"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,9 @@
     "date-fns": "^3.2.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet.fullscreen": "^3.0.2",
     "lucide-react": "^0.288.0",
     "next": "^13.5.5",
     "react": "^18.2.0",
@@ -57,6 +61,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.5",
     "postcss": "^8.4.31",
