--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "homolog": "NODE_ENV=production next build && next start"
   },
   "keywords": [],
   "author": "",
@@ -61,6 +62,7 @@
     "@types/react-dom": "^18.2.13",
     "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.5",
     "postcss": "^8.4.31",
