--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-leaflet": "^4.2.1",
     "react-to-print": "^3.0.2",
     "sass": "^1.80.2",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
