--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "leaflet-easybutton": "^2.4.0",
     "leaflet.fullscreen": "^3.0.2",
     "lucide-react": "^0.288.0",
+    "motion": "^11.14.4",
     "next": "^13.5.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
