--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 REACT_APP_ENVIRONMENT=production
-NEXT_PUBLIC_API_URL= api-lb-1757285222.sa-east-1.elb.amazonaws.com:9000
-NEXT_PUBLIC_GEOSERVER_URL= api-lb-1757285222.sa-east-1.elb.amazonaws.com:9001/geoserver/vallengeo/wms
+NEXT_PUBLIC_API_URL= 54.232.129.154:9000
+NEXT_PUBLIC_GEOSERVER_URL= 54.232.129.154:9001/geoserver/vallengeo/wms
