--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -288,6 +288,14 @@
             <artifactId>java-wkhtmltopdf-wrapper</artifactId>
             <version>1.1.13-RELEASE</version>
         </dependency>
+
+        <!-- AWS SDK para S3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.27</version>
+        </dependency>
+
     </dependencies>
 
     <build>
