--- a/backend/src/main/resources/application-homolog.yml
+++ b/backend/src/main/resources/application-homolog.yml
@@ -7,6 +7,11 @@ server:
   api:  ${API_URL}:${API_PORT}
 
 spring:
+  config:
+    import: optional:file:./docker/vallengeo/.env[.properties]
+    activate:
+      on-profile: homolog
+
   ## ===============================
   ## = BANCO DE DADOS
   ## ===============================
