--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-geojson": "^0.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
